--- a/index.html
+++ b/index.html
@@ -5,55 +5,62 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <!-- Normalize -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" />
+    <!-- Custom styles -->
+    <link href="./css/styles.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <a href="./index.html" class="logo link">Web<span class="logo-part">Studio</span></a>
+            <ul class="page-nav list">
+                <li><a href="" class="link">Studio</a></li>
+                <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
         <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" target="_blank">+11 (000) 111-11-11</a></li>
+            <ul class="contacts list">
+                <li><a href="mailto:info@devstudio.com" target="_blank" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" target="_blank" class="link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1> 
-              <button type="button">Order Service</button>
+        <section class="section-hero">
+            <h1 class="hero-title">Effective Solutions<br> for Your Business</h1> 
+            <button class="hero-btn" type="button">Order Service</button>
         </section>
         <section>
             <h2 hidden>Section 2</h2>
-            <ul>
+            <ul class="list">
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    <h3 class="subtitle">Strategy</h3>
+                    <p>Our goal is to identify the business<br> problem to walk away with the<br> perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <h3 class="subtitle">Punctuality</h3>
+                    <p>Bring the key message to the<br> brand's audience for the best price<br> within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    <h3 class="subtitle">Diligence</h3>
+                    <p>Research and confirm brands that<br> present the strongest digital growth<br> opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <h3 class="subtitle">Technologies</h3>
+                    <p>Design practice focused on digital<br> experiences. We bring forth a deep<br> passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>What are we doing</h2>
-            <ul>
+            <h2 class="doing-title">What are we doing</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/What-are-we-doing/img1.jpg" alt="Monitor" width="360" height="300">
                 </li>
@@ -65,36 +72,38 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
-            <ul>
+        <section class="our-team">
+            <h2 class="our-team-title">Our Team</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/Our-Team/img11.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
+                    <h3 class="subtitle">Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/Our-Team/img12.jpg" alt="Tom Ford" width="264" height="260">
-                    <h3>Tom Ford</h3>
+                    <h3 class="subtitle">Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/Our-Team/img13.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h3>Camila Garcia</h3>
+                    <h3 class="subtitle">Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/Our-Team/img14.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
+                    <h3 class="subtitle">Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+        <a href="./index.html" class="logo link">Web<span class="logo-part-footer">Studio</span></a>
         <p>
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            Increase the flow of customers and<br>
+            sales for your business with digital<br>
+            marketing & growth solutions.
         </p>
     </footer>
 </body>
