--- a/portfolio.html
+++ b/portfolio.html
@@ -5,57 +5,60 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet ">
+    <!-- Normalize -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" />
+    <!-- Custom styles -->
+    <link href="./css/styles.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 
 <body>
-    <header>
+    <header class="background-header">
         <nav>
-            <a href="./index.html"><span>Web</span>Studio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <a href="./index.html" class="logo link "><span class="logo-part">Web</span>Studio</a>
+            <ul class="page-nav list">
+                <li><a href="" class="link">Studio</a></li>
+                <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
         <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" target="_blank">+11 (000) 111-11-11</a></li>
+            <ul class="contacts list">
+                <li><a href="mailto:info@devstudio.com" target="_blank" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" target="_blank" class="link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
         <!--Filters-->
         <section>
-            <ul>
-                <li><button type="button">All</button></li>
-                <li><button type="button">Web Site</button></li>
-                <li><button type="button">App</button></li>
-                <li><button type="button">Design</button></li>
-                <li><button type="button">Marketing</button></li>
+            <ul class="list">
+                <li><button class="btn" type="button">All</button></li>
+                <li><button class="btn" type="button">Web Site</button></li>
+                <li><button class="btn" type="button">App</button></li>
+                <li><button class="btn" type="button">Design</button></li>
+                <li><button class="btn" type="button">Marketing</button></li>
             </ul>
         </section>
         <!--Row1-->
         <section>
             <h2 hidden>Row1</h2>
-            <ul>
+            <ul class="list">
                 <li>
-                    <img src="./images/portfolio/img-8.jpg" alt="" width="" height="">
+                    <img src="./images/portfolio/img-8.jpg" alt="Screen Bank App" width="360" height="300">
                     <h3>Banking App Interface Concept</h3>
                     <p>App</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
-                    <img src="./images/portfolio/img-7.jpg" alt="" width="" height="">
+                    <img src="./images/portfolio/img-7.jpg" alt="Scan QR code" width="360" height="300">
                     <h3>Cashless Payment</h3>
                     <p>Marketing</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
-                    <img src="./images/portfolio/img-6.jpg" alt="" width="" height="">
+                    <img src="./images/portfolio/img-6.jpg" alt="Laptop and phone" width="360" height="300">
                     <h3>Meditation App</h3>
                     <p>App</p>
                 </li>
@@ -64,23 +67,19 @@
         <!--Row2-->
         <section>
             <h2 hidden>Row2</h2>
-            <ul>
+            <ul class="list">
                 <li>
-                    <img src="./images/portfolio/img-5.jpg" alt="" width="" height="">
+                    <img src="./images/portfolio/img-5.jpg" alt="Taxi driver in the car" width="360" height="300">
                     <h3>Taxi Service</h3>
                     <p>Marketing</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
-                    <img src="./images/portfolio/img-4.jpg" alt="" width="" height="">
+                    <img src="./images/portfolio/img-4.jpg" alt="Start screen" width="360" height="300">
                     <h3>Screen Illustrations</h3>
                     <p>Design</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
-                    <img src="./images/portfolio/img-3.jpg" alt="" width="" height="">
+                    <img src="./images/portfolio/img-3.jpg" alt="Girl in headphones" width="360" height="300">
                     <h3>Online Courses</h3>
                     <p>Marketing</p>
                 </li>
@@ -89,23 +88,19 @@
         <!--Row3-->
         <section>
             <h2 hidden>Row3</h2>
-            <ul>
+            <ul class="list">
                 <li>
-                    <img src="./images/portfolio/img-2.jpg" alt="" width="" height="">
+                    <img src="./images/portfolio/img-2.jpg" alt="Instagram stories concept" width="360" height="300">
                     <h3>Instagram Stories Concept</h3>
                     <p>Design</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
-                    <img src="./images/portfolio/img-1.jpg" alt="" width="" height="">
+                    <img src="./images/portfolio/img-1.jpg" alt="A bag of food" width="360" height="300">
                     <h3>Organic Food</h3>
                     <p>Web Site</p>
                 </li>
-            </ul>
-            <ul>
                 <li>
-                    <img src="./images/portfolio/img(1).jpg" alt="" width="" height="">
+                    <img src="./images/portfolio/img(1).jpg" alt="Making coffee" width="360" height="300">
                     <h3>Fresh Coffee</h3>
                     <p>Web Site</p>
                 </li>
@@ -113,10 +108,12 @@
         </section>
 
     </main>
-    <footer>
-        <a href="./index.html"><span>Web</span>Studio</a>
+    <footer class="background-footer">
+        <a href="./index.html" class="logo link "><span class="logo-part link">Web</span><span class="studio link">Studio</span></a>
         <p>
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+           Increase the flow of customers and<br>
+           sales for your business with digital<br>
+           marketing & growth solutions.       
         </p>
     </footer>
 </body>
