--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet ">
@@ -16,7 +18,7 @@
 </head>
 
 <body>
-    <header class="background-header">
+    <header>
         <nav>
             <a href="./index.html" class="logo link">Web<span class="logo-part">Studio</span></a>
             <ul class="page-nav list">
@@ -25,7 +27,7 @@
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="contacts">
             <ul class="contacts list">
                 <li><a href="mailto:info@devstudio.com" target="_blank" class="link">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111" target="_blank" class="link">+11 (000) 111-11-11</a></li>
@@ -35,6 +37,7 @@
     <main>
         <!--Filters-->
         <section>
+            <h1 hidden>Filters</h1>
             <ul class="list">
                 <li><button class="btn" type="button">All</button></li>
                 <li><button class="btn" type="button">Web Site</button></li>
