--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
@@ -15,7 +17,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="page">
     <header>
         <nav>
             <a href="./index.html" class="logo link">Web<span class="logo-part">Studio</span></a>
@@ -25,7 +27,7 @@
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="contacts">
             <ul class="contacts list">
                 <li><a href="mailto:info@devstudio.com" target="_blank" class="link">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111" target="_blank" class="link">+11 (000) 111-11-11</a></li>
@@ -38,23 +40,23 @@
             <button class="hero-btn" type="button">Order Service</button>
         </section>
         <section>
-            <h2 hidden>Section 2</h2>
+            <h2 hidden class="hidden-section">Section 2</h2>
             <ul class="list">
                 <li>
                     <h3 class="subtitle">Strategy</h3>
-                    <p>Our goal is to identify the business<br> problem to walk away with the<br> perfect and creative solution.</p>
+                    <p class="text">Our goal is to identify the business<br> problem to walk away with the<br> perfect and creative solution.</p>
                 </li>
                 <li>
                     <h3 class="subtitle">Punctuality</h3>
-                    <p>Bring the key message to the<br> brand's audience for the best price<br> within the shortest possible time.</p>
+                    <p class="text">Bring the key message to the<br> brand's audience for the best price<br> within the shortest possible time.</p>
                 </li>
                 <li>
                     <h3 class="subtitle">Diligence</h3>
-                    <p>Research and confirm brands that<br> present the strongest digital growth<br> opportunities and minimize risk.</p>
+                    <p class="text">Research and confirm brands that<br> present the strongest digital growth<br> opportunities and minimize risk.</p>
                 </li>
                 <li>
                     <h3 class="subtitle">Technologies</h3>
-                    <p>Design practice focused on digital<br> experiences. We bring forth a deep<br> passion for problem-solving.</p>
+                    <p class="text">Design practice focused on digital<br> experiences. We bring forth a deep<br> passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -75,32 +77,32 @@
         <section class="our-team">
             <h2 class="our-team-title">Our Team</h2>
             <ul class="list">
-                <li>
+                <li class="card-bg">
                     <img src="./images/Our-Team/img11.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3 class="subtitle">Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <p class="text">Product Designer</p>
                 </li>
-                <li>
+                <li class="card-bg">
                     <img src="./images/Our-Team/img12.jpg" alt="Tom Ford" width="264" height="260">
                     <h3 class="subtitle">Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="card-bg">
                     <img src="./images/Our-Team/img13.jpg" alt="Camila Garcia" width="264" height="260">
                     <h3 class="subtitle">Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="text">Marketing</p>
                 </li>
-                <li>
+                <li class="card-bg">
                     <img src="./images/Our-Team/img14.jpg" alt="Daniel Wilson" width="264" height="260">
                     <h3 class="subtitle">Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
         <a href="./index.html" class="logo link">Web<span class="logo-part-footer">Studio</span></a>
-        <p>
+        <p class="text">
             Increase the flow of customers and<br>
             sales for your business with digital<br>
             marketing & growth solutions.
