--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </main>
     <footer class="footer">
         <a href="./index.html" class="logo link">Web<span class="logo-part-footer">Studio</span></a>
-        <p class="text">
+        <p class="tex">
             Increase the flow of customers and<br>
             sales for your business with digital<br>
             marketing & growth solutions.
