--- a/portfolio.html
+++ b/portfolio.html
@@ -49,19 +49,19 @@
         <!--Row1-->
             <ul class="list">
                 <li>
-                    <a class="link"><img src="./images/portfolio/img-8.jpg" alt="Screen Bank App" width="360" height="300"></a>                    
+                    <a class="link"><img src="./images/portfolio/img-8.jpg" alt="Screen Bank App" width="360" height="300">                    
                     <h2 class="subtitle">Banking App Interface Concept</h2>
-                    <p class="text">App</p>
+                    <p class="text">App</p></a>
                 </li>
                 <li>
-                    <a class="link"><img src="./images/portfolio/img-7.jpg" alt="Scan QR code" width="360" height="300"></a>                 
+                    <a class="link"><img src="./images/portfolio/img-7.jpg" alt="Scan QR code" width="360" height="300">                 
                     <h2 class="subtitle">Cashless Payment</h2>
-                    <p class="text">Marketing</p>
+                    <p class="text">Marketing</p></a>
                 </li>
                 <li>
-                    <a class="link"><img src="./images/portfolio/img-6.jpg" alt="Laptop and phone" width="360" height="300"></a>
+                    <a class="link"><img src="./images/portfolio/img-6.jpg" alt="Laptop and phone" width="360" height="300">
                     <h2 class="subtitle">Meditation App</h2>
-                    <p class="text">App</p>
+                    <p class="text">App</p></a>
                 </li>
             </ul>
         
@@ -70,19 +70,19 @@
             <h2 hidden>Row2</h2>
             <ul class="list">
                 <li>
-                    <img src="./images/portfolio/img-5.jpg" alt="Taxi driver in the car" width="360" height="300">
+                    <a><img src="./images/portfolio/img-5.jpg" alt="Taxi driver in the car" width="360" height="300">
                     <h3 class="subtitle">Taxi Service</h3>
-                    <p>Marketing</p>
+                    <p>Marketing</p></a>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-4.jpg" alt="Start screen" width="360" height="300">
+                    <a><img src="./images/portfolio/img-4.jpg" alt="Start screen" width="360" height="300">
                     <h3 class="subtitle">Screen Illustrations</h3>
-                    <p>Design</p>
+                    <p>Design</p></a>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-3.jpg" alt="Girl in headphones" width="360" height="300">
+                    <a><img src="./images/portfolio/img-3.jpg" alt="Girl in headphones" width="360" height="300">
                     <h3 class="subtitle">Online Courses</h3>
-                    <p>Marketing</p>
+                    <p>Marketing</p></a>
                 </li>
             </ul>
         
@@ -91,19 +91,19 @@
             <h2 hidden>Row3</h2>
             <ul class="list">
                 <li>
-                    <img src="./images/portfolio/img-2.jpg" alt="Instagram stories concept" width="360" height="300">
+                    <a><img src="./images/portfolio/img-2.jpg" alt="Instagram stories concept" width="360" height="300">
                     <h3 class="subtitle">Instagram Stories Concept</h3>
-                    <p>Design</p>
+                    <p>Design</p></a>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img-1.jpg" alt="A bag of food" width="360" height="300">
+                    <a><img src="./images/portfolio/img-1.jpg" alt="A bag of food" width="360" height="300">
                     <h3 class="subtitle">Organic Food</h3>
-                    <p>Web Site</p>
+                    <p>Web Site</p></a>
                 </li>
                 <li>
-                    <img src="./images/portfolio/img(1).jpg" alt="Making coffee" width="360" height="300">
+                    <a><img src="./images/portfolio/img(1).jpg" alt="Making coffee" width="360" height="300">
                     <h3 class="subtitle">Fresh Coffee</h3>
-                    <p>Web Site</p>
+                    <p>Web Site</p></a>
                 </li>
             </ul>
         </section>
