--- a/portfolio.html
+++ b/portfolio.html
@@ -65,35 +65,35 @@
                 </li>
         <!--Row2-->
                 <li>
-                    <a><img src="./images/portfolio/img-5.jpg" alt="Taxi driver in the car" width="360" height="300">
-                    <h3 class="subtitle">Taxi Service</h3>
-                    <p>Marketing</p></a>
+                    <a class="link"><img src="./images/portfolio/img-5.jpg" alt="Taxi driver in the car" width="360" height="300">
+                    <h2 class="subtitle">Taxi Service</h2>
+                    <p class="text">Marketing</p></a>
                 </li>
                 <li>
-                    <a><img src="./images/portfolio/img-4.jpg" alt="Start screen" width="360" height="300">
-                    <h3 class="subtitle">Screen Illustrations</h3>
-                    <p>Design</p></a>
+                    <a class="link"><img src="./images/portfolio/img-4.jpg" alt="Start screen" width="360" height="300">
+                    <h2 class="subtitle">Screen Illustrations</h2>
+                    <p class="text">Design</p></a>
                 </li>
                 <li>
-                    <a><img src="./images/portfolio/img-3.jpg" alt="Girl in headphones" width="360" height="300">
-                    <h3 class="subtitle">Online Courses</h3>
-                    <p>Marketing</p></a>
+                    <a class="link"><img src="./images/portfolio/img-3.jpg" alt="Girl in headphones" width="360" height="300">
+                    <h2 class="subtitle">Online Courses</h2>
+                    <p class="text">Marketing</p></a>
                 </li>
         <!--Row3-->
                 <li>
-                    <a><img src="./images/portfolio/img-2.jpg" alt="Instagram stories concept" width="360" height="300">
-                    <h3 class="subtitle">Instagram Stories Concept</h3>
-                    <p>Design</p></a>
+                    <a class="link"><img src="./images/portfolio/img-2.jpg" alt="Instagram stories concept" width="360" height="300">
+                    <h2 class="subtitle">Instagram Stories Concept</h2>
+                    <p class="text">Design</p></a>
                 </li>
                 <li>
-                    <a><img src="./images/portfolio/img-1.jpg" alt="A bag of food" width="360" height="300">
-                    <h3 class="subtitle">Organic Food</h3>
-                    <p>Web Site</p></a>
+                    <a class="link"><img src="./images/portfolio/img-1.jpg" alt="A bag of food" width="360" height="300">
+                    <h2 class="subtitle">Organic Food</h2>
+                    <p class="text">Web Site</p></a>
                 </li>
                 <li>
-                    <a><img src="./images/portfolio/img(1).jpg" alt="Making coffee" width="360" height="300">
-                    <h3 class="subtitle">Fresh Coffee</h3>
-                    <p>Web Site</p></a>
+                    <a class="link"><img src="./images/portfolio/img(1).jpg" alt="Making coffee" width="360" height="300">
+                    <h2 class="subtitle">Fresh Coffee</h2>
+                    <p class="text">Web Site</p></a>
                 </li>
             </ul>
         </section>
