--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
                     <p class="text">Web Site</p></a>
                 </li>
                 <li>
-                    <a class="link"><img src="./images/portfolio/img(1).jpg" alt="Making coffee" width="360" height="300">
+                    <a class="link"><img src="./images/portfolio/img9.jpg" alt="Making coffee" width="360" height="300">
                     <h2 class="subtitle">Fresh Coffee</h2>
                     <p class="text">Web Site</p></a>
                 </li>
